--- a/Web_Prac_Extension/Challenge-1.html
+++ b/Web_Prac_Extension/Challenge-1.html
@@ -58,6 +58,7 @@
         </div>
     </div>
 
+    <div class="flexBox1">
         <div class="box3">
             <h4>WORK EXPERIENCE</h4>
             <ul>
@@ -77,6 +78,46 @@
                 </li>
             </ul>
         </div>
-    
+
+        <div class="box2">
+            <h4>ACADEMIC HISTORY</h4>
+            <ul>
+                <li>
+                    <h5>MY PRIMARY SCHOOL<span class="location"> Epping, Melboure, 3002</span></h5>
+                    <mark>March 2005 - December 2007</mark>
+                    <p class="boxText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id molestie metus, eget accumsan lectus. Sed id molestie metus.</p> 
+                </li>
+                <li>
+                    <h5>MY HIGH SCHOOL<span class = "location"> Epping, Melbourne, 3002</span></h5> 
+                    <mark>March 2007 - December 2015</mark>
+                    <p class="boxText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id molestie metus, eget accumsan lectus. Sed id molestie metus.</p> 
+                </li>
+                <li><h5>MY UNIVERSITY<span class = "location"> Epping, Melbourne, 3002</span></h5> 
+                    <mark>March 2015 - Current</mark>
+                    <p class="boxText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id molestie metus, eget accumsan lectus. Sed id molestie metus.</p> 
+                </li>    
+            </ul> 
+        </div>
+
+        <div class="box3">
+            <h4>WORK EXPERIENCE</h4>
+            <ul>
+                <li><h5>WAREHOUSE MANAGER<span class = "location"> Epping, Melbourne, 3002</span></h5> 
+                    <mark>May 2007 - August 2009</mark>
+                    <p class="boxText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id molestie metus, eget accumsan lectus. Sed id molestie metus. 
+                </li>
+
+                <li><h5>SOFTWARE DEVELOPMENT<span class = "location"> Epping, Melbourne, 3002</span></h5> 
+                    <mark>January 2009 - December 2015</mark>
+                    <p class="boxText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id molestie metus, eget accumsan lectus. Sed id molestie metus. 
+                </li>
+                
+                <li><h5>CAR SALESMAN<span class = "location"> Epping, Melbourne, 3002</span></h5> 
+                    <mark>January 2015 - Current</mark>
+                    <p class="boxText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id molestie metus, eget accumsan lectus. Sed id molestie metus. 
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
